--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/react": "^5.11.2",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "@testing-library/jest-dom": "^5.16.4",
